# chcore-lab-mospi-2020

./: .gdbinit  CMakeLists.txt  Makefile  README.md
boot/: boot.h  init_c.c  mmu.c  start.S
kernel/: CMakeLists.txt  head.S  main.c  monitor.c
kernel/common/: list.h  lock.c  lock.h  mm.h  printk.c  smp.c  types.h
kernel/exception/: exception.c  exception_table.S  irq.c  irq.h  pgfault.c
kernel/ipc/: ipc.h  ipc_call.c  ipc_return.c
kernel/mm/: CMakeLists.txt  buddy.c  mm.c  page_table.c  slab.h  vm_syscall.c
kernel/process/: capability.c  process.c  thread.c  thread.h
kernel/sched/: context.c  policy_rr.c  sched.c  sched.h
kernel/syscall/: syscall.c  syscall_num.h
scripts/: build.sh  compile_user.sh  docker_build.sh  grade-lab5
tests/: README.md
tests/mm/buddy/: CMakeLists.txt
tests/mm/page_table/: CMakeLists.txt  test_aarch64_page_table.c
user/: CMakeLists.txt
user/lab4/: yield_single.c
user/lab5/: CMakeLists.txt
user/lab5/apps/: CMakeLists.txt  init.c  init.h  init_main.c  init_test.c
user/lab5/tmpfs/: CMakeLists.txt  fs_test.cpio  hashtable.h  list.h  radix.h  tmpfs.c  tmpfs.h  tmpfs_main.c  tmpfs_server.c  tmpfs_server.h  tmpfs_test.c
user/lib/: libmain.c  spawn.c  syscall.c
